# quantum-phase-estimation

./: README.md  pyproject.toml
.github/workflows/: ci.yml
qpe/: __init__.py  core.py
quantum_phase_estimation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_qpe.py
